buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}


plugins {
    id 'java'
    id 'jacoco'
}

group = 'com.freenote'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.30 // 80% line coverage
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation("commons-codec:commons-codec:1.18.0")
    implementation("org.apache.logging.log4j:log4j-core:2.24.3")
    implementation("org.apache.logging.log4j:log4j-api:2.24.3")
    testImplementation("org.mockito:mockito-core:5.17.0")
    implementation("com.squareup:javapoet:1.13.0")
    compileOnly 'com.google.auto.service:auto-service-annotations:1.1.1'
    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
}


tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"]
    options.compilerArgs += ["--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"]
}

tasks.register('bootRun', JavaExec) {
    group = 'application'
    description = 'Run main class'
    classpath = sourceSets.main.runtimeClasspath
    mainClass.set('com.freenote.app.server.example.EchoServer')
}